--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,6 @@
 {
   "mailgun_apikey": "key-eb08f8476d9e4be38f23097358cb91d0",
   "mailgun_hostname": "smtp.mailgun.org",
-  "mailgun_login": "pross888@gmail.com",
-  "mailgun_password": "Lkjpoi098---M",
-  "foo": "bar"
+  "mailgun_login": "postmaster@mg.alexanderditzend.com",
+  "mailgun_password": "04ce33580e5cc0352f15393c6b660548"
 }
